added list of users

--- a/src/assets/styles/general/_base.scss
+++ b/src/assets/styles/general/_base.scss
@@ -4,7 +4,7 @@ body {
   color: var(--base-font-color);
   line-height: var(--base-line-height);
   background-color: var(--base-body-color);
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &.hidden {
     overflow: hidden;
